k8s/module-6/postgre.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: postgresqube-deployment
  namespace: sonar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres
        ports:
        - name: http
          containerPort: 5432
        volumeMounts:
          - name: postgres-persistent-storage
            mountPath: var/lib/postgresql/data
      volumes:
        - name: postgres-persistent-storage
          persistentVolumeClaim:
            claimName: pvc-postgres
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: sonar
spec:
  selector:
    app: postgres
  ports:
    - name: db
      protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
