k8s/module-6/sonar.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sonarqube-deployment
  namespace: sonar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonar
  template:
    metadata:
      labels:
        app: sonar
    spec:
      containers:
        - name: sonarqube
          image: sonarqube
          ports:
            - name: http
              containerPort: 9000
          volumeMounts:
            - name: sonar-persistent-storage
              mountPath: /opt/sonarqube/data
      volumes:
        - name: sonar-persistent-storage
          persistentVolumeClaim:
            claimName: pvc-sonar
---
apiVersion: v1
kind: Service
metadata:
  name: sonar-svc
  namespace: sonar
spec:
  selector:
    app: sonar
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9000
  type: NodePort
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sonar-ingress
  namespace: sonar
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: sonar.cluster.mbazhok.playpit.net
    http:
      paths:
      - path: /
        backend:
          serviceName: sonar-svc
          servicePort: 80



f81e914ee82a52af6bce4ae4cf400246ff2c12bb
